# Printer

./: .gitignore  BWJob.cpp  BWJob.h  BWPrinter.cpp  BWPrinter.h  CJob.cpp  CJob.h  CMakeLists.txt  CPrinter.cpp  CPrinter.h  Device.cpp  Device.h  InfoPrinter.cpp  InfoPrinter.h  Job.cpp  Job.h  Logger.cpp  Logger.h  PrintAllOutputTest.txt  PrintOutputTest.txt  Printer.cpp  Printer.h  PrinterSystem.cpp  PrinterSystem.h  ScanJob.cpp  ScanJob.h  Scanner.cpp  Scanner.h  Scheduler.cpp  Scheduler.h  Usecase2Info.txt  XMLParser.cpp  XMLParser.h  main.cpp  test.txt  test.xml  test.xml.txt  tests.cpp
Alletesten/: alldomaintests.cpp  allinputtests.cpp  alloutputtests.cpp  alltests.cpp
Alletesten/testinput/: emptyDeviceName.txt  emptyDeviceName.xml  emptyDeviceName.xml.txt  emptyType.txt  emptyType.xml  emptyUser.txt  emptyUser.xml.txt  infoPrinter.txt  infoPrinterBasic.txt  invalidDevice.xml  negativeEmission.txt  negativeEmission.xml  negativeEmission.xml.txt  negativeJobnr.txt  negativeJobnr.xml  negativePagecount.txt  negativePagecount.xml  notuniqueJobnr.txt  notuniqueJobnr.xml.txt  validDevice.xml
Alletesten/testoutput/: AsciiSysText.txt  PrintAllOutput.txt  PrintAllOutputTest.txt  PrintOutput.txt  ScheduleJobOutputTest.txt  infoPrinter.txt  outputtest.xml
Device Testen/: DeviceInputTests.cpp  deviceTesten.cpp
Device Testen/DevtestInput/: invalid_emissions.xml  invalid_speed.xml  noName.xml  valid_device.xml
DeviceTesten/: DeviceInputTests.cpp  JobOutputTests.cpp
DeviceTesten/DevtestInput/: emptyDeviceName.xml  negativeEmission.xml  negativeSpeed.xml  validDevice.xml
JobTesten/: JobDomainTests.cpp  JobInputTests.cpp  JobOutputTests.cpp
JobTesten/JtestInput/: negativeJobnr.xml  negativeJobnr.xml.txt  negativeJobnr2.xml  notuniqueJobnr.xml
Libs/: TicTacToeUtils.cpp  TicTacToeUtils.h
PrinterTesten/: PrinterDomainTests.cpp  PrinterInputTests.cpp  PrinterOutputTests.cpp  tests.cpp
PrinterTesten/PrinterTestenInputs/: test.xml
SystemTesten/: PrintAllOutput.txt  PrintAllOutputTest.txt  PrintOutput.txt  PrintOutputTest.txt  SystemInputTests.cpp  SystemOutputTests.cpp  test.xml
SystemTesten/SystemInputs/: emptyDeviceName.xml  emptyDeviceName.xml.txt  emptyUser.xml  invalidDevice.xml  negativeJobnr.xml  negativePagecount.xml  negativePagecount.xml.txt  negativeSpeed.xml  negativeSpeed.xml.txt  notuniqueJobnr.xml
old/: Printer.h
old/PrinterTesten/: PrinterInputTests.cpp
old/SystemTesten/: PrintAllOutput.txt  PrintOutput.txt  SystemInputTests.cpp  SystemOutputTests.cpp  test.xml
old/SystemTesten/SystemInputs/: emptyUser.xml  invalidDevice.xml  negativeEmission.xml  negativeEmission.xmltest.txt  negativeSpeed.xml  negativeSpeed.xmltest.txt  notuniqueJobnr.xml
